--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,49 +1,129 @@
 name: CI
 
-# Trigger when code is pushed or PR is created for dev or main
 on:
   push:
-    branches: ["main", "dev"]
+    branches: [main, dev, staging]
   pull_request:
-    branches: ["main", "dev"]
+    branches: [main, dev, staging]
 
 jobs:
-  build:
-    name: Build & Quality Checks
+  lint:
+    name: Lint Code
     runs-on: ubuntu-latest
-
+    
     steps:
-      # Checkout repo
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # Setup Node with caching
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: "npm"
+          node-version: '18'
+          cache: 'npm'
 
-      # Install dependencies
       - name: Install dependencies
         run: npm ci
 
-      # Lint code
-      - name: Lint
+      - name: Run ESLint
         run: npm run lint
 
-      # TypeScript type-check
-      - name: Type check
-        run: npm run type-check
+      - name: Check Prettier formatting
+        run: npx prettier --check "**/*.{ts,tsx,js,jsx,json,css,md}"
 
-      # Build Next.js project
-      - name: Build
+  type-check:
+    name: TypeScript Type Check
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run TypeScript compiler
+        run: npx tsc --noEmit
+
+  build:
+    name: Build Application
+    runs-on: ubuntu-latest
+    needs: [lint, type-check]
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build Next.js application
         run: npm run build
+        env:
+          NODE_ENV: production
 
-      # Upload artifacts for debugging failed builds (optional but useful)
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: next-build
+          name: build-output
           path: .next
-          retention-days: 3
+          retention-days: 7
+
+  test-build:
+    name: Test Build Output
+    runs-on: ubuntu-latest
+    needs: [build]
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-output
+          path: .next
+
+      - name: Check build size
+        run: |
+          du -sh .next
+          echo "Build size check passed"
+
+  status-check:
+    name: All Checks Passed
+    runs-on: ubuntu-latest
+    needs: [lint, type-check, build, test-build]
+    if: always()
+    
+    steps:
+      - name: Check if all jobs succeeded
+        run: |
+          if [ "${{ needs.lint.result }}" != "success" ] || \
+             [ "${{ needs.type-check.result }}" != "success" ] || \
+             [ "${{ needs.build.result }}" != "success" ] || \
+             [ "${{ needs.test-build.result }}" != "success" ]; then
+            echo "❌ Some checks failed"
+            exit 1
+          else
+            echo "✅ All checks passed successfully"
+          fi
