--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,99 +10,159 @@ jobs:
   lint:
     name: Lint Code
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
-      - run: npm ci
-      - run: npm run lint
-      - run: npx prettier --check "**/*.{ts,tsx,js,jsx,json,css,md}"
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run ESLint
+        run: npm run lint
+
+      - name: Check Prettier formatting
+        run: npx prettier --check "**/*.{ts,tsx,js,jsx,json,css,md}"
 
   type-check:
     name: TypeScript Type Check
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
-      - run: npm ci
-      - run: npx tsc --noEmit
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run TypeScript compiler
+        run: npx tsc --noEmit
 
   build:
     name: Build Application
     runs-on: ubuntu-latest
     needs: [lint, type-check]
-
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
-      - run: npm ci
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build Next.js application
         run: npm run build
         env:
           NODE_ENV: production
 
-      # ✅ Ensure build folder actually exists
-      - name: Verify build output exists
+      - name: Verify build output
         run: |
           if [ ! -d ".next" ]; then
-            echo "❌ .next not found. Build failed."
+            echo "❌ Build directory not found"
             exit 1
           fi
-          ls -R .next
+          echo "✅ Build directory exists"
+          du -sh .next
+          echo "Build contents:"
+          ls -la .next
 
-      # ✅ Correct upload (works in all cases)
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-output
-          path: .next/**
+          path: .next/
           retention-days: 7
+        if: success()
 
   test-build:
     name: Test Build Output
     runs-on: ubuntu-latest
-    needs: build
-
+    needs: [build]
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-      - run: npm ci
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # ✅ Now this will always find the artifact
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-output
-          path: .next
+          path: .next/
+
+      - name: Verify downloaded artifacts
+        run: |
+          if [ ! -d ".next" ]; then
+            echo "❌ Downloaded artifacts not found"
+            exit 1
+          fi
+          echo "✅ Artifacts downloaded successfully"
+          ls -la .next
 
       - name: Check build size
-        run: du -sh .next
+        run: |
+          BUILD_SIZE=$(du -sh .next | cut -f1)
+          echo "📦 Build size: $BUILD_SIZE"
+          
+          # Optional: Check if size is reasonable (adjust as needed)
+          SIZE_MB=$(du -sm .next | cut -f1)
+          echo "Build size in MB: $SIZE_MB"
+          
+          if [ $SIZE_MB -gt 500 ]; then
+            echo "⚠️ Warning: Build size exceeds 500MB"
+          else
+            echo "✅ Build size is acceptable"
+          fi
 
   status-check:
     name: All Checks Passed
     runs-on: ubuntu-latest
     needs: [lint, type-check, build, test-build]
     if: always()
+    
     steps:
-      - name: Check job results
+      - name: Check if all jobs succeeded
         run: |
-          if [ "${{ needs.lint.result }}" != "success" ] ||
-             [ "${{ needs.type-check.result }}" != "success" ] ||
-             [ "${{ needs.build.result }}" != "success" ] ||
+          echo "## 📊 CI Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- Lint: ${{ needs.lint.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Type Check: ${{ needs.type-check.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Build: ${{ needs.build.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Test Build: ${{ needs.test-build.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          if [ "${{ needs.lint.result }}" != "success" ] || \
+             [ "${{ needs.type-check.result }}" != "success" ] || \
+             [ "${{ needs.build.result }}" != "success" ] || \
              [ "${{ needs.test-build.result }}" != "success" ]; then
-            echo "❌ Some checks failed"
+            echo "❌ Some checks failed" >> $GITHUB_STEP_SUMMARY
             exit 1
           else
-            echo "✅ All checks passed"
+            echo "✅ All checks passed successfully!" >> $GITHUB_STEP_SUMMARY
+          fi
