--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,20 @@ on:
   pull_request:
     branches: [main, dev, staging]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+  actions: read
+  id-token: write
+
 jobs:
   lint:
     name: Lint Code
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -33,7 +42,7 @@ jobs:
   type-check:
     name: TypeScript Type Check
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -51,10 +60,10 @@ jobs:
         run: npx tsc --noEmit
 
   build:
-    name: Build Application
+    name: Build & Package
     runs-on: ubuntu-latest
     needs: [lint, type-check]
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -76,27 +85,52 @@ jobs:
       - name: Verify build output
         run: |
           if [ ! -d ".next" ]; then
-            echo "❌ Build directory not found"
+            echo "❌ Build directory .next not found"
+            ls -la
             exit 1
           fi
           echo "✅ Build directory exists"
-          du -sh .next
-          echo "Build contents:"
-          ls -la .next
+          du -sh .next || true
+          echo "Top-level .next contents:"
+          ls -la .next | sed -n '1,200p' || true
 
-      - name: Upload build artifacts
+      - name: Package build output (tar.gz)
+        run: |
+          # Create a single tarball containing the contents of .next
+          tar -C .next -czf build-output.tar.gz .
+          echo "Created build-output.tar.gz"
+          ls -lh build-output.tar.gz
+          du -sh build-output.tar.gz || true
+
+      - name: Upload build artifact (tarball)
         uses: actions/upload-artifact@v4
         with:
           name: build-output
-          path: .next/
+          path: build-output.tar.gz
           retention-days: 7
         if: success()
 
+      - name: Debug list artifacts for this run (verify upload)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "GITHUB_REPOSITORY=$GITHUB_REPOSITORY"
+          echo "GITHUB_RUN_ID=$GITHUB_RUN_ID"
+          echo "Listing artifacts for this run..."
+          # install jq if missing (safe on ubuntu-latest)
+          if ! command -v jq >/dev/null 2>&1; then
+            sudo apt-get update -y
+            sudo apt-get install -y jq
+          fi
+          curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
+            "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID/artifacts" \
+            | jq .
+
   test-build:
-    name: Test Build Output
+    name: Test Build Output (download & extract)
     runs-on: ubuntu-latest
     needs: [build]
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -110,30 +144,47 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Download build artifacts
+      - name: Debug list artifacts visible to downloader
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "GITHUB_REPOSITORY=$GITHUB_REPOSITORY"
+          echo "GITHUB_RUN_ID=$GITHUB_RUN_ID"
+          if ! command -v jq >/dev/null 2>&1; then
+            sudo apt-get update -y
+            sudo apt-get install -y jq
+          fi
+          curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
+            "https://api.github.com/repos/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID/artifacts" \
+            | jq .
+
+      - name: Download build artifact (tarball)
         uses: actions/download-artifact@v4
         with:
           name: build-output
-          path: .next/
+          path: .
 
-      - name: Verify downloaded artifacts
+      - name: Verify downloaded artifact and extract
         run: |
-          if [ ! -d ".next" ]; then
-            echo "❌ Downloaded artifacts not found"
+          if [ ! -f "build-output.tar.gz" ]; then
+            echo "❌ build-output.tar.gz not found after download"
+            ls -la
             exit 1
           fi
-          echo "✅ Artifacts downloaded successfully"
-          ls -la .next
+          echo "✅ build-output.tar.gz downloaded"
+          ls -lh build-output.tar.gz
+          mkdir -p .next
+          tar -C .next -xzf build-output.tar.gz
+          echo "Contents of .next after extraction:"
+          du -sh .next || true
+          ls -la .next | sed -n '1,200p' || true
 
       - name: Check build size
         run: |
           BUILD_SIZE=$(du -sh .next | cut -f1)
           echo "📦 Build size: $BUILD_SIZE"
-          
-          # Optional: Check if size is reasonable (adjust as needed)
           SIZE_MB=$(du -sm .next | cut -f1)
           echo "Build size in MB: $SIZE_MB"
-          
           if [ $SIZE_MB -gt 500 ]; then
             echo "⚠️ Warning: Build size exceeds 500MB"
           else
@@ -145,7 +196,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lint, type-check, build, test-build]
     if: always()
-    
+
     steps:
       - name: Check if all jobs succeeded
         run: |
@@ -156,7 +207,7 @@ jobs:
           echo "- Build: ${{ needs.build.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- Test Build: ${{ needs.test-build.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          
+
           if [ "${{ needs.lint.result }}" != "success" ] || \
              [ "${{ needs.type-check.result }}" != "success" ] || \
              [ "${{ needs.build.result }}" != "success" ] || \
