docs: Add image assets and update project documentation

--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,10 @@ Thumbs.db
 # Some Markdowns
 /TODO.md
 /ROADMAP.md
+/EMAILJS_SETUP.md
+/IMAGE.md
 
 #Misc
-/if_npm_error.txt
 /.github/copilot-instructions.md
 /OFFICE BEARERS DETAILS - Sheet1.csv
+
